--- a/trybe-exercises/Bloco3/dia1/Projeto1.html
+++ b/trybe-exercises/Bloco3/dia1/Projeto1.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="nomeee" content="width=device-width, initial-scale=1.0">
   <title>Christian Trybe</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <h1><strong>Exercícios: <br>Parte II</strong></h1>
+  <h1 class="title"><strong>Exercícios: <br>Parte II</strong></h1>
   <ol>
     <li>Crie uma lista das pessoas que você já fez amizade na Trybe.</li><br>
-    <ul><li><a href="#Victor De Paula">Victor De Paula</a></li>
+    <ul class="listaulp"><li><a href="#Victor De Paula">Victor De Paula</a></li>
     <li><a href="#Daniel Filipe">Daniel Filipe</a></li>
     <li><a href="#Paulo Renan">Paulo Renan</a></li>
     <li><a href="#Héctor Benitez">Héctor Benitez</a></li>
@@ -34,57 +35,57 @@
   <ol>
     <li>Crie um parágrafo para cada pessoa da sua lista.</li><br>
     <li>Crie um link entre a sua lista e os parágrafos de pessoas.</li><br>
-    <li><a href="https://google.com" target="_blank">Crie um link para a página do Google.</a></li><br>
+    <li><a class="button" href="https://google.com" target="_blank">Crie um link para a página do Google.</a></li><br>
     <ul>
-      <p id="Victor De Paula">Não tinha medo o tal João de Santo Cristo<br>
+      <p class="listaulp" id="Victor De Paula">Não tinha medo o tal João de Santo Cristo<br>
         Era o que todos diziam quando ele se perdeu<br>
         Deixou pra trás todo o marasmo da fazenda<br>
         Só pra sentir no seu sangue o ódio que Jesus lhe deu</p><br>
-      <p id="Daniel Filipe">Quando criança só pensava em ser bandido<br>
+      <p class="listaulp" id="Daniel Filipe">Quando criança só pensava em ser bandido<br>
         Ainda mais quando com um tiro de soldado o pai morreu<br>
         Era o terror da sertania onde morava<br>
         E na escola até o professor com ele aprendeu</p><br>
-      <p id="Paulo Renan">Ia pra igreja só pra roubar o dinheiro<br>
+      <p class="listaulp" id="Paulo Renan">Ia pra igreja só pra roubar o dinheiro<br>
         Que as velhinhas colocavam na caixinha do altar<br>
         Sentia mesmo que era mesmo diferente<br>
         Sentia que aquilo ali não era o seu lugar</p><br>
-      <p id="Héctor Benitez">Ele queria sair para ver o mar<br>
+      <p class="listaulp" id="Héctor Benitez">Ele queria sair para ver o mar<br>
         E as coisas que ele via na televisão<br>
         Juntou dinheiro para poder viajar<br>
         De escolha própria, escolheu a solidão</p><br>
-      <p id="Andrews Matsubara">Comia todas as menininhas da cidade<br>
+      <p class="listaulp" id="Andrews Matsubara">Comia todas as menininhas da cidade<br>
         De tanto brincar de médico, aos doze era professor<br>
         Aos quinze, foi mandado pro o reformatório<br>
         Onde aumentou seu ódio diante de tanto terror</p><br>
-      <p id="Carlos Barros">Não entendia como a vida funcionava<br>
+      <p class="listaulp" id="Carlos Barros">Não entendia como a vida funcionava<br>
         Discriminação por causa da sua classe e sua cor<br>
         Ficou cansado de tentar achar resposta<br>
         E comprou uma passagem, foi direto a Salvador</p><br>
-      <p id="Marcelo">E lá chegando foi tomar um cafezinho<br>
+      <p class="listaulp" id="Marcelo">E lá chegando foi tomar um cafezinho<br>
         E encontrou um boiadeiro com quem foi falar<br>
         E o boiadeiro tinha uma passagem e ia perder a viagem<br>
         Mas João foi lhe salvar</p><br>  
-      <p id="Martin Silva">Dizia ele "estou indo pra Brasília<br>
+      <p class="listaulp" id="Martin Silva">Dizia ele "estou indo pra Brasília<br>
         Neste país lugar melhor não há<br>
         'Tô precisando visitar a minha filha<br>
         Eu fico aqui e você vai no meu lugar"</p><br>
-      <p id="Pablo">E João aceitou sua proposta<br>
+      <p class="listaulp" id="Pablo">E João aceitou sua proposta<br>
         E num ônibus entrou no Planalto Central<br>
         Ele ficou bestificado com a cidade<br>
         Saindo da rodoviária, viu as luzes de Natal</p><br>
-      <p id="Lucas Farias">Meu Deus, mas que cidade linda<br>
+      <p class="listaulp" id="Lucas Farias">Meu Deus, mas que cidade linda<br>
         No Ano Novo eu começo a trabalhar<br>
         Cortar madeira, aprendiz de carpinteiro<br>
         Ganhava cem mil por mês em Taguatinga</p><br>
-      <p id="Lys">Na sexta-feira ia pra zona da cidade<br>
+      <p class="listaulp" id="Lys">Na sexta-feira ia pra zona da cidade<br>
         Gastar todo o seu dinheiro de rapaz trabalhador<br>
         E conhecia muita gente interessante<br>
         Até um neto bastardo do seu bisavô</p><br>
-      <p id="">Um peruano que vivia na Bolívia<br>
+      <p class="listaulp" id="">Um peruano que vivia na Bolívia<br>
         E muitas coisas trazia de lá<br>
         Seu nome era Pablo e ele dizia<br>
         Que um negócio ele ia começar</p><br>
-      <p id="">E o Santo Cristo até a morte trabalhava<br>
+      <p class="listaulp" id="">E o Santo Cristo até a morte trabalhava<br>
         Mas o dinheiro não dava pra ele se alimentar<br>
         E ouvia às sete horas o noticiário<br>
         Que sempre dizia que o seu ministro ia ajudar</p><br></li>
