--- a/trybe-exercises/Bloco3/dia4/index2.html
+++ b/trybe-exercises/Bloco3/dia4/index2.html
@@ -32,10 +32,10 @@
 					</ul>
 					<img src="http://1.bp.blogspot.com/-9nUUfWBZg8w/T7uLMMiurGI/AAAAAAAAFrs/cjHB7NDNCJg/s1600/Mantis-shrimp.jpg" alt="">
 				</section>
-				<section>
+				<section class="section2">
 					<h3>Os olhos mais incríveis da natureza</h3>
-					<p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal,
-						 pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos 
+					<p><img src="https://cdn.uanews.arizona.edu/s3fs-public/styles/gallery-large-800x600/public/story-images/mantis-shrimp-eye-closeup.jpg?itok=ZPUnO3U2" alt="olhos do Stomatopoda">Esses animais possuem o mais complexo sistema de visão de cores do mundo animal,
+						 pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos 
 						 presentes em sua retina.</p>
 					<p>Nossos olhos possuem três tipos desses receptores - que correspondem à luz azul,
 						 verde e vermelha -, que nos permitem perceber o espectro de cores que vemos. Os 
@@ -48,8 +48,8 @@
 						 perceber. O sistema de visão dos estomatópodes possui doze cones sensíveis à luz e 
 						 outros quatro que filtram a luz (16 cones no total), o que lhes permite ver cores 
 						 polarizadas e imagens multiespectrais.</p>
-					<p>Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver 1024
-						 cores, ou seja, 1 septilhão de cores. Em comparação, o olho humano vê 106 cores, ou 
+					<p>Como cada cone pode ver cerca de 100 cores, os estomatópodes são capazes de ver <strong>1024
+						cores</strong>, ou seja, <strong>1 septilhão de cores</strong>. Em comparação, o olho humano vê 106 cores, ou 
 						 seja, 1 milhão de cores apenas. A visão dos estomatópodes é sensível à luz ultravioleta,
 						  mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
 				</section>
